--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -29,14 +29,6 @@
                 android:weightSum="1">
 
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/recipeTitle"
-                    android:layout_weight="0.03"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                    android:text="Food" />
-
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -58,7 +50,7 @@
                             <TextView
                                 android:text="&#8226; 1 L of foo \n &#8226; 44 cm of bar \n &#8226; 100 baz"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/textView7"
+                                android:id="@+id/textIngredients"
                                 android:layout_marginTop="10dp"
                                 android:elevation="1dp"
                                 android:layout_width="200dp" />
@@ -69,17 +61,26 @@
                                 android:layout_height="wrap_content">
 
                                 <TextView
-                                    android:text="Est. Time: \n15 Minutes"
+                                    android:text="Country"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:id="@+id/textView10"
+                                    android:id="@+id/textCountry"
+                                    android:textColor="@android:color/holo_red_dark" />
+
+                                <TextView
+                                    android:text="Category"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/textCategory"
+                                    android:layout_weight="1"
                                     android:textColor="@android:color/holo_red_dark" />
 
                                 <Button
                                     android:text="Edit"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:id="@+id/editButton" />
+                                    android:id="@+id/editButton"
+                                    android:onClick="editRecipe"/>
 
                             </LinearLayout>
 
@@ -90,12 +91,13 @@
                 </LinearLayout>
 
                 <TextView
-                    android:text= "\t\t Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec vehicula quam, non pellentesque neque. Donec nec vestibulum est, ac consectetur leo. Ut aliquet gravida tincidunt. Maecenas a lobortis velit. Fusce porttitor nunc quis urna blandit, ut malesuada enim accumsan. \n\n\t\tCurabitur sed sagittis ligula. Nulla bibendum consectetur eros in ullamcorper. Morbi porttitor sapien in quam porta elementum. Praesent sollicitudin dolor et nulla efficitur, a accumsan justo malesuada. Nam tincidunt nec ante tincidunt elementum.  Sed ac metus rhoncus, sagittis erat nec, suscipit dui. Praesent efficitur imperdiet sapien, ac condimentum nisl molestie vitae.\n\n\t\t Curabitur bibendum felis eu lorem auctor, non mattis erat vulputate. Sed consequat turpis felis, non feugiat leo placerat ac. Nunc dapibus luctus nisl, eget gravida arcu rutrum quis. Morbi porttitor faucibus augue. Donec vel quam condimentum, porta quam id, dignissim metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur vulputate efficitur felis ac sodales.  Aenean nec pharetra dolor, ac vulputate eros. Maecenas ac diam gravida, volutpat urna non, laoreet orci. Proin ut tellus nec est eleifend laoreet. Vivamus nec dapibus augue. Fusce tincidunt egestas ultrices. Vestibulum nunc ligula, sollicitudin vel consectetur id, facilisis in metus. Curabitur laoreet nisi quis condimentum molestie. Curabitur a rhoncus nisi. Pellentesque fermentum, velit in dignissim rutrum, augue enim efficitur est, id suscipit lacus augue a dolor. \n\n\t\tSed vulputate nisi sit amet augue convallis consequat. Vestibulum egestas semper venenatis. Curabitur eleifend eleifend pellentesque. Vivamus vel quam sit amet mi ultricies semper vitae a diam. Maecenas vestibulum, dui vel suscipit ornare, metus quam efficitur magna, at pulvinar eros enim non diam. Sed at ultrices lacus.  Nulla consequat facilisis ex eget blandit. Vestibulum elementum eget nisi vitae congue. Curabitur egestas, nibh eu venenatis rhoncus, libero erat vestibulum neque, vel cursus metus tellus quis metus. Aliquam mi magna, feugiat ac enim nec, finibus porta purus. Sed faucibus velit in malesuada auctor. \n\n\t\tCras viverra, ligula iaculis posuere scelerisque, ligula libero tempor velit, vel pharetra felis ante in dui. Nullam tempor tellus ac egestas porttitor.  Suspendisse eu massa pellentesque, commodo dui ultricies, dignissim tortor. Sed pretium risus quis purus tempus, sit amet egestas nisi condimentum. Cras tincidunt nibh sit amet congue tincidunt. Quisque tempus condimentum libero nec elementum. Vestibulum auctor tincidunt dolor. Cras aliquam dictum tincidunt. Aliquam pellentesque erat nec arcu iaculis ultrices. Fusce a sapien vitae urna ullamcorper tincidunt ut eget tellus. Vestibulum felis nisl, accumsan fermentum convallis ac, vulputate in ligula. Phasellus in cursus velit."
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:autoText="false"
                     android:layout_marginTop="30dp"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/black"
+                    android:id="@+id/textInstructions"
+                    android:text="Instructions" />
             </LinearLayout>
         </ScrollView>
 
